fix(security): Enhance CORS configuration with dynamic allowed origins